# python-faker-jsonschema

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  MAINTAINER.md  Makefile  README.md  ROADMAP.md  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/agents/: correctness-review.agent.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml  tests.yml  weekly.yml
docs/src/: index.md  quickstart.md
docs/src/reference/: arrays.md  boolean-null.md  compound.md  numbers.md  objects.md  special.md  strings.md
faker_jsonschema/: provider.py  utils.py
js_regex/: LICENSE  _impl.py
scripts/: gen_examples.py
tests/: conftest.py  test_any.py  test_array.py  test_boolean.py  test_compound.py  test_context.py  test_edge_cases.py  test_enum_nullable.py  test_faker_jsonschema.py  test_integer.py  test_integration.py  test_merge.py  test_new_features.py  test_not.py  test_null.py  test_number.py  test_object.py  test_pbt.py  test_provider.py  test_ref.py  test_string.py
tests/unit/: test_any.py  test_array.py  test_boolean.py  test_compound.py  test_context.py  test_enum_nullable.py  test_integer.py  test_not.py  test_null.py  test_number.py  test_object.py  test_ref.py  test_string.py
