[project]
name = "faker-jsonschema"
version = "0.1.0"
description = "Generate fake data matching a JSON schema with Faker."
authors = [{ name = "Anentropic", email = "ego@anentropic.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.0.0",
    "hypothesis>=6.0.0",
    "inject>=5.2.0",
    "jsonschema>=4.0.0",
    "pytz>=2024.1",
    "wrapt>=1.16.0",
]

[project.urls]
Homepage = "https://anentropic.github.io/python-faker-jsonschema/"
Documentation = "https://anentropic.github.io/python-faker-jsonschema/"
Source = "https://github.com/anentropic/python-faker-jsonschema"

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "flaky>=3.8.1",
    "ipython>=8.0.0",
    "pdbpp>=0.12.1",
    "pytest>=8.0.0",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0,<9.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.basedpyright]
typeCheckingMode = "off"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"
